--- a/CoreTeam/static/coreTeam.css
+++ b/CoreTeam/static/coreTeam.css
@@ -23,9 +23,9 @@ body {
     text-align: center;
     justify-content: center;
     transition: transform 0.3s ease-in-out;
-    width: 300px;
+    width: 200px;
     height: 300px;
-    position: relative; /* Ensure proper positioning for child elements */
+    position: relative; 
 }
 
 .team-card:hover {
