--- a/CoreTeam/templates/coreTeamLayout.html
+++ b/CoreTeam/templates/coreTeamLayout.html
@@ -1,12 +1,12 @@
+{% extends 'layout.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+{% block stylesheetsName %}
     <link rel="stylesheet" href="{% static 'coreTeam.css' %}">
-</head>
-<body>
+{% endblock  %}
+
+{% block content %}
+   
 {% for team_member in team_member %}
 <div class="team-card">
     <div class="saturn">
@@ -27,6 +27,5 @@
     </div>
 </div>
 {% endfor %}
-</body>
-</html>
 
+{% endblock %}
