--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load static tailwind_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,9 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}STAC{% endblock  %}</title>
     <link rel="stylesheet" href="{% static 'styles.css'%}">
+    {% block stylesheetsName %}{% endblock stylesheetsName %}
+    {% tailwind_css %}
 </head>
 <body>
-    <nav>This is our <nav/>
+    {% block navbar %}
+    {% include 'website/navbar.html' %}
+    {% endblock %}
     {% block content %}
     {% endblock %}
 </body>
