--- a/CoreTeam/static/coreTeam.css
+++ b/CoreTeam/static/coreTeam.css
@@ -4,7 +4,7 @@ body {
     color: #f0f0f0;
     margin: 0;
     padding: 0;
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
