--- a/Achievements/templates/achievements.html
+++ b/Achievements/templates/achievements.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% load static %}
 {% block stylesheetsName %}
-    <link rel="stylesheet" href="{% static 'styles_gallery.css' %}">
+    <link rel="stylesheet" href="{% static 'styles_achievements.css' %}">
 {% endblock  %}
 {% block content %}
-{% endblock %}
+{% endblock  %}
