--- a/CoreTeam/templates/coreTeamLayout.html
+++ b/CoreTeam/templates/coreTeamLayout.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block stylesheetsName %}
-    <link rel="stylesheet" href="{% static 'coreTeam.css' %}">
+    <link rel="stylesheet" href="{% static 'styles_coreTeam.css' %}">
 {% endblock  %}
 
 {% block content %}
