--- a/Blog/templates/blog.html
+++ b/Blog/templates/blog.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% load static %}
 {% block stylesheetsName %}
-    <link rel="stylesheet" href="{% static 'styles_gallery.css' %}">
+    <link rel="stylesheet" href="{% static 'styles_blog.css' %}">
 {% endblock  %}
 {% block content %}
-{% endblock %}
+{% endblock  %}
