--- a/Highlights/templates/highlights.html
+++ b/Highlights/templates/highlights.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% load static %}
 {% block stylesheetsName %}
-    <link rel="stylesheet" href="{% static 'styles_gallery.css' %}">
+    <link rel="stylesheet" href="{% static 'styles_highlights.css' %}">
 {% endblock  %}
 {% block content %}
 {% endblock %}
