--- a/CoreTeam/static/styles_coreTeam.css
+++ b/CoreTeam/static/styles_coreTeam.css
@@ -13,7 +13,7 @@ body {
 }
 
 .team-card {
-    background-image: url('body_back2.jpg');
+    background-image: url('images/body_back2.jpg');
     background-size: cover;
     background-position: center;
     border-radius: 15px;
