--- a/CoreTeam/static/styles_coreTeam.css
+++ b/CoreTeam/static/styles_coreTeam.css
@@ -1,15 +1,19 @@
-body {
-    background-color: #0d0d0d;
+body{
+    /* background-image: url('images/body_back.jpg'); */
+    background-color: #1a1a1a;
+    
+}
+main {
     font-family: 'Roboto', sans-serif;
     color: #f0f0f0;
-    margin: 0;
-    padding: 0;
+    margin-top: 110px;
     display: grid;
+    padding-left: 7%;
+    padding-right: 7%;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Responsive grid layout */
+    gap: 15px;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    flex-wrap: wrap;
-    gap: 20px;
 }
 
 .team-card {
@@ -22,10 +26,9 @@ body {
     padding: 15px;
     padding-top: 20px;
     text-align: center;
-    justify-content: center;
     transition: transform 0.3s ease-in-out;
-    width: 320px;
-    height: 340px;
+    width: 340px;
+    height: 380px;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -56,7 +59,7 @@ body {
 }
 
 .team-card:hover .saturn-inner {
-    transform: translate(-45%, -57%) rotateY(180deg); /* Rotate from the center */
+    transform: translate(-49%, -52%) rotateY(180deg); /* Rotate from the center */
 }
 
 .saturn img,
@@ -117,6 +120,10 @@ h2 {
     margin: 0 10px;
     text-decoration: none;
     transition: color 0.3s ease-in-out;
+}
+
+.social-icons a:hover {
+    color: #ddd; /* Light hover effect */
 }
 
 .social-icons a svg {
