--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,4 +1,3 @@
-{% load static %}
 {% load static tailwind_tags %}
 <!DOCTYPE html>
 <html lang="en">
@@ -6,20 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}STAC{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'styles.css' %}">
-    {% block stylesheetsName %}{% endblock stylesheetsName %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="{% static 'navbar.css' %}">
     {% tailwind_css %}
+    {% block stylesheetsName %}{% endblock stylesheetsName %}
 </head>
 <body>
-
     {% include 'website/navbar.html' %}
-    <div id="main-content">
-        {% block content %}
-        
-        {% endblock %}
-    </div>
+    <main>
+    {% block content %}
+    
+    {% endblock %}
+    </main>
     {% include 'website/footer.html' %}
-    {% comment %} <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+    {% comment %} 
+    <!-- Vanta.js script for the dynamic background effect -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@0.5.24/dist/vanta.clouds.min.js"></script>
     <script>
     document.addEventListener('DOMContentLoaded', function () {
@@ -39,7 +40,7 @@
             overlap: 0.80,              
         });
     });
-    </script> {% endcomment %}
-
+    </script> 
+    {% endcomment %}
 </body>
 </html>
