--- a/Events/static/styles_events.css
+++ b/Events/static/styles_events.css
@@ -1,3 +1,10 @@
+main {
+    font-family: 'Roboto', sans-serif;
+    color: #f0f0f0;
+    margin-top: 110px;
+    justify-content: center;
+    align-items: center;
+}
 .event-list {
     display: flex;
     flex-direction: row;
@@ -7,22 +14,30 @@
 }
 
 .event-section {
+    display: flex;
+    flex-direction: row;
     background-color: #333;
     border-radius: 8px;
     color: #fff;
     overflow: hidden;
-    width: 300px;
+    width: 95%;
     margin-bottom: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
+.event-image {
+    flex: 1;
+    border-right: 1px solid #444;
+}
+
 .event-image img {
     width: 100%;
-    height: auto;
-    border-bottom: 1px solid #444;
+    height: 100%;
+    object-fit: cover;
 }
 
 .event-content {
+    flex: 2;
     padding: 15px;
 }
 
