--- a/Gallery/templates/gallery.html
+++ b/Gallery/templates/gallery.html
@@ -1,7 +1,38 @@
 {% extends "layout.html" %}
 {% load static %}
+
 {% block stylesheetsName %}
     <link rel="stylesheet" href="{% static 'styles_gallery.css' %}">
-{% endblock  %}
+{% endblock %}
+
 {% block content %}
+<div id="vanta-bg"></div> <!-- Vanta.js background -->
+<section class="gallery">
+    <div class="gallery-grid">
+        {% for image in images %}
+        {% comment %} {% url 'GalleryEvent' image.event_id %} {% endcomment %}
+        <a href="#" class="gallery-link"> <!-- Each image as a link -->
+            <div class="gallery-item">
+                <img src="{{ image.url }}" alt="Gallery Image {{ forloop.counter }}">
+                <div class="gallery-hover">
+                    <h3>{{ image.title }}</h3>
+                    <p>{{ image.description }}</p>
+                </div>
+            </div>
+        </a>
+        {% endfor %}
+    </div>
+</section>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
+<script>
+  VANTA.NET({
+    el: "#vanta-bg",
+    color: 0x1e90ff,
+    backgroundColor: 0x000000,
+    points: 10.00,
+    maxDistance: 20.00,
+    spacing: 15.00
+  });
+</script>
 {% endblock %}
