--- a/CoreTeam/templates/coreTeam.html
+++ b/CoreTeam/templates/coreTeam.html
@@ -6,7 +6,7 @@
 <div class="team-card">
     <div class="saturn">
         <div class="saturn-inner">
-            <img src="{{ team_member.image_url.url }}" alt="{{ team_member.name }}">
+            <img src="{{ team_member.image.url }}" alt="{{ team_member.name }}">
             <div class="message">
                 <p>{{ team_member.message }}</p>
             </div>
