--- a/CoreTeam/templates/coreTeam.html
+++ b/CoreTeam/templates/coreTeam.html
@@ -2,6 +2,10 @@
 {% load static %}
 
 {% block content %}
+<div class="about-image size-logo banner-img" style="color: #FFFF; padding:7%">
+    <div><img src="{% static 'images/Logowhite.png' %}" alt="Stac logo" style="height:4.5rem; padding-right:8rem;"><p class="title-a text-center"style="padding-left:9rem; color: #1de9b6; padding-top: 2.5rem; font-size: 180%;"> | CORE TEAM</p><hr class="titlehr" /></div>
+</div>
+<div class='backmain'>
 {% for team_member in team_member %}
 <div class="team-card">
     <div class="saturn">
@@ -21,4 +25,6 @@
     </div>
 </div>
 {% endfor %}
+</div>
+
 {% endblock %}
